increase memory request for multiifo_coinc jobs

--- a/config_multiifo/executables_mod.ini
+++ b/config_multiifo/executables_mod.ini
@@ -30,6 +30,7 @@ merge_psds = ${which:pycbc_merge_psds}
 optimal_snr = ${which:pycbc_optimal_snr}
 page_foreground = ${which:pycbc_page_foreground}
 page_ifar = ${which:pycbc_page_ifar}
+page_ifar_catalog = ${which:pycbc_ifar_catalog}
 page_injections = ${which:pycbc_page_injtable}
 page_segplot = ${which:pycbc_page_segplot}
 page_segtable = ${which:pycbc_page_segtable}
@@ -60,7 +61,7 @@ strip_injections = ${which:pycbc_strip_injections}
 tmpltbank = ${which:pycbc_geom_nonspinbank}
 html_snippet = ${which:pycbc_create_html_snippet}
 
-; 
+;
 
 
 ; #################### Mini Followup #########################################
@@ -147,7 +148,7 @@ dagman|priority = 5000
 
 [pegasus_profile-multiifo_coinc]
 dagman|priority = 5000
-condor|+InitialRequestMemory = 12000
+condor|+InitialRequestMemory = 75000
 
 [pegasus_profile-distribute_background_bins]
 dagman|priority = 5000
