add low frequency cutoff to plot_qscan

--- a/config_multiifo/plotting_mod_2det.ini
+++ b/config_multiifo/plotting_mod_2det.ini
@@ -94,6 +94,7 @@ fake-strain = aLIGODesignSensitivityP1200087
 [plot_qscan]
 time-windows = 50,10 10,1 1,1
 fake-strain = aLIGODesignSensitivityP1200087
+low-frequency-cutoff = ${inspiral|low-frequency-cutoff}
 
 [single_template-h1&plot_singles_timefreq-h1&plot_qscan-h1]
 ;frame-type = ${workflow-datafind|datafind-h1-frame-type}
