use virgo noise curve

--- a/config_multiifo/plotting_mod_3det.ini
+++ b/config_multiifo/plotting_mod_3det.ini
@@ -89,24 +89,25 @@ f-low = ${inspiral|low-frequency-cutoff}
 rank = newsnr
 num-loudest = 20
 approximant = ${inspiral|approximant}
-fake-strain = aLIGODesignSensitivityP1200087
 
 [plot_qscan]
 time-windows = 50,10 10,1 1,1
-fake-strain = aLIGODesignSensitivityP1200087
 low-frequency-cutoff = ${inspiral|low-frequency-cutoff}
 
 [single_template-h1&plot_singles_timefreq-h1&plot_qscan-h1]
 ;frame-type = ${workflow-datafind|datafind-h1-frame-type}
 channel-name = ${workflow|h1-channel-name}
+fake-strain = aLIGODesignSensitivityP1200087
 
 [single_template-l1&plot_singles_timefreq-l1&plot_qscan-l1]
 ;frame-type = ${workflow-datafind|datafind-l1-frame-type}
 channel-name = ${workflow|l1-channel-name}
+fake-strain = aLIGODesignSensitivityP1200087
 
 [single_template-v1&plot_singles_timefreq-v1&plot_qscan-v1]
 ;frame-type = ${workflow-datafind|datafind-v1-frame-type}
 channel-name = ${workflow|v1-channel-name}
+fake-strain = AdVDesignSensitivityP1200087
 
 [single_template&plot_singles_timefreq&plot_qscan]
 strain-high-pass = ${inspiral|strain-high-pass}
@@ -136,7 +137,6 @@ autogating-width = ${inspiral|autogating-width}
 autogating-taper = ${inspiral|autogating-taper}
 autogating-pad = ${inspiral|autogating-pad}
 minimum-chisq-bins = 3
-fake-strain = aLIGODesignSensitivityP1200087
 
 [single_template-inj_params_inverted]
 injection-scale-factor=-1
@@ -431,8 +431,14 @@ f-lower = 20.0
 num-bins = 7
 bin-spacing = log
 
-[plot_spectrum]
+[plot_spectrum-h1]
 psd-model = aLIGODesignSensitivityP1200087
+
+[plot_spectrum-l1]
+psd-model = aLIGODesignSensitivityP1200087
+
+[plot_spectrum-v1]
+psd-model = AdVDesignSensitivityP1200087
 
 [page_ifar]
 decimation-factor = 270000
