remove unnecessary psd-model arg

--- a/config_multiifo/plotting_mod_3det.ini
+++ b/config_multiifo/plotting_mod_3det.ini
@@ -431,14 +431,7 @@ f-lower = 20.0
 num-bins = 7
 bin-spacing = log
 
-[plot_spectrum-h1]
-psd-model = aLIGODesignSensitivityP1200087
-
-[plot_spectrum-l1]
-psd-model = aLIGODesignSensitivityP1200087
-
-[plot_spectrum-v1]
-psd-model = AdVDesignSensitivityP1200087
+[plot_spectrum]
 
 [page_ifar]
 decimation-factor = 270000
