make closed-box plots to avoid min/max plot limit errors

--- a/config_multiifo/plotting_mod_3det.ini
+++ b/config_multiifo/plotting_mod_3det.ini
@@ -450,6 +450,7 @@ log-y =
 [page_segplot]
 
 [plot_snrifar]
+closed-box =
 
 [page_foreground]
 
@@ -463,5 +464,6 @@ num-coincs-to-write = 25
 [plot_gating]
 
 [plot_snrratehist]
+closed-box =
 
 [plot_throughput]
