force null plots to avoid plot limit errors

--- a/config_multiifo/plotting_mod_3det.ini
+++ b/config_multiifo/plotting_mod_3det.ini
@@ -451,6 +451,7 @@ log-y =
 
 [plot_snrifar]
 closed-box =
+use-hierarchical-level = 1
 
 [page_foreground]
 
@@ -465,5 +466,6 @@ num-coincs-to-write = 25
 
 [plot_snrratehist]
 closed-box =
+use-hierarchical-level = 1
 
 [plot_throughput]
