--- a/config_multiifo/plotting_mod_2det.ini
+++ b/config_multiifo/plotting_mod_2det.ini
@@ -410,15 +410,15 @@ x-min = 6
 x-max = 15
 
 [plot_binnedhist]
-sngl-stat = ${fit_by_template|sngl-stat}
-fit-function = ${fit_by_template|fit-function}
+;sngl-stat = ${fit_by_template|sngl-stat}
+fit-function = exponential
 ; limit the number of triggers for which duration is calculated
 stat-threshold = 5.0
 ;${fit_by_template|stat-threshold}
-prune-param = ${fit_by_template|prune-param}
-log-prune-param =
-prune-bins = ${fit_by_template|prune-bins}
-prune-number = ${fit_by_template|prune-number}
+;prune-param = ${fit_by_template|prune-param}
+;log-prune-param =
+;prune-bins = ${fit_by_template|prune-bins}
+;prune-number = ${fit_by_template|prune-number}
 
 [plot_binnedhist-duration]
 bin-param = template_duration
