--- a/config_multiifo/analysis_mod.ini
+++ b/config_multiifo/analysis_mod.ini
@@ -84,7 +84,7 @@ parallelization-factor = 10
 
 [workflow-results]
 ; number of levels of event hierarchical removal to perform
-max-hierarchical-removal = 3
+max-hierarchical-removal = 0
 
 [llwadd]
 ilwdchar-compat =
@@ -272,7 +272,7 @@ loudest-keep-values = 15.0:9999999999999
 
 [multiifo_statmap]
 max-hierarchical-removal = ${workflow-results|max-hierarchical-removal}
-hierarchical-removal-against = exclusive
+;hierarchical-removal-against = exclusive
 
 [multiifo_statmap&multiifo_statmap_inj]
 ; time window (in seconds) used to remove triggers around zero-lag coincidences
