remove background fitting from 3det version

--- a/config_multiifo/executables_mod_3det.ini
+++ b/config_multiifo/executables_mod_3det.ini
@@ -16,8 +16,8 @@ calculate_psd = ${which:pycbc_calculate_psd}
 multiifo_coinc = ${which:pycbc_multiifo_coinc_findtrigs}
 combine_statmap = ${which:pycbc_multiifo_add_statmap}
 distribute_background_bins = ${which:pycbc_distribute_background_bins}
-fit_by_template = ${which:pycbc_fit_sngls_by_template}
-fit_over_param = ${which:pycbc_fit_sngls_over_multiparam}
+;fit_by_template = ${which:pycbc_fit_sngls_by_template}
+;fit_over_param = ${which:pycbc_fit_sngls_over_multiparam}
 foreground_censor = ${which:pycbc_foreground_censor}
 hdfinjfind = ${which:pycbc_coinc_hdfinjfind}
 hdf_trigger_merge = ${which:pycbc_coinc_mergetrigs}
@@ -154,9 +154,9 @@ condor|+InitialRequestMemory = 35000
 dagman|priority = 5000
 condor|+InitialRequestMemory = 6000
 
-[pegasus_profile-fit_by_template]
-dagman|priority = 5000
-condor|+InitialRequestMemory = 10000
+;[pegasus_profile-fit_by_template]
+;dagman|priority = 5000
+;condor|+InitialRequestMemory = 10000
 
 [pegasus_profile-hdf_trigger_merge]
 dagman|priority = 5000
