--- a/config_multiifo/injections_bns.ini
+++ b/config_multiifo/injections_bns.ini
@@ -69,10 +69,11 @@ min-mtotal = 2
 max-mtotal = 6
 
 enable-spin =
+aligned =
 min-spin1 = 0
-max-spin1 = 0.4
+max-spin1 = 0.05
 min-spin2 = 0
-max-spin2 = 0.4
+max-spin2 = 0.05
 
 waveform = SpinTaylorT2threePointFivePN
 taper-injection = startend
