re-enable binnedhist plot

--- a/config_multiifo/plotting_mod_3det.ini
+++ b/config_multiifo/plotting_mod_3det.ini
@@ -420,10 +420,13 @@ fit-function = exponential
 ; limit the number of triggers for which duration is calculated
 stat-threshold = 5.0
 ;${fit_by_template|stat-threshold}
-;prune-param = ${fit_by_template|prune-param}
-;log-prune-param =
-;prune-bins = ${fit_by_template|prune-bins}
-;prune-number = ${fit_by_template|prune-number}
+prune-param = mtotal
+;${fit_by_template|prune-param}
+log-prune-param =
+prune-bins = 2
+;${fit_by_template|prune-bins}
+prune-number = 2
+;${fit_by_template|prune-number}
 
 [plot_binnedhist-duration]
 bin-param = template_duration
