--- a/config_multiifo/analysis_mod_real_data_3det_test.ini
+++ b/config_multiifo/analysis_mod_real_data_3det_test.ini
@@ -71,10 +71,7 @@ plot-throughput =
 ; shifting one ifo relative to all the rest
 ; The shifted ('pivot') ifo will be the one appearing first in this list
 timeslide-precedence = H1, L1, V1, K1, I1
-parallelization-factor = 1000
-
-[workflow-coincidence-injections]
-parallelization-factor = 100
+;parallelization-factor = 1000
 
 [workflow-psd]
 parallelization-factor = 10
@@ -228,21 +225,21 @@ channel-name = ${workflow|v1-channel-name}
 
 [bank2hdf]
 
-;[fit_by_template]
-;fit-function = exponential
-;sngl-stat = newsnr_sgveto_psdvar_scaled
-;stat-threshold = 6.
-;prune-param = mtotal
-;log-prune-param =
-;prune-bins = 2
-;prune-number = 2
-;
-;[fit_over_param]
-;fit-param = template_duration chi_eff eta
-;; f_low required to calculate template duration to smooth the fit over
-;f-lower = ${inspiral|low-frequency-cutoff}
-;log-param = True False False
-;smoothing-width = 0.4 0.2 0.08
+[fit_by_template]
+fit-function = exponential
+sngl-stat = newsnr_sgveto_psdvar_scaled
+stat-threshold = 6.
+prune-param = mtotal
+log-prune-param =
+prune-bins = 2
+prune-number = 2
+
+[fit_over_param]
+fit-param = template_duration chi_eff eta
+; f_low required to calculate template duration to smooth the fit over
+f-lower = ${inspiral|low-frequency-cutoff}
+log-param = True False False
+smoothing-width = 0.4 0.2 0.08
 
 [distribute_background_bins]
 
